--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
+  wokwi_id:     454934700358170625       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "4 Bit Adder"      # Project title
+  author:       "Zeynep Demirdag"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "4 Bit Addition Operation"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -16,24 +16,24 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "input 0"
+  ui[1]: "input 1"
+  ui[2]: "input 2"
+  ui[3]: "input 3"
+  ui[4]: "input 4"
+  ui[5]: "input 5"
+  ui[6]: "input 6"
+  ui[7]: "input 7"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "output 0"
+  uo[1]: "output 1"
+  uo[2]: "output 2"
+  uo[3]: "output 3"
+  uo[4]: "output 4"
+  uo[5]: "output 5"
+  uo[6]: "output 6"
+  uo[7]: "output 7"
 
   # Bidirectional pins
   uio[0]: ""
